Ziggy release 0.6.0 (2024-07-26)